[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/hud.gd" type="Script" id=1]
[ext_resource path="res://joe_rumbi.theme" type="Theme" id=2]
[ext_resource path="res://scenes/ui/pause_menu.tscn" type="PackedScene" id=3]
[ext_resource path="res://textures/ui/crosshair.png" type="Texture" id=4]

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Reticle" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 8.0
texture = ExtResource( 4 )
expand = true

[node name="Background" type="ColorRect" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -70.0
margin_right = 238.0
color = Color( 0.109804, 0.109804, 0.109804, 1 )

[node name="HealthUI" type="Label" parent="Background"]
margin_left = 115.0
margin_top = 10.0
margin_right = 214.0
margin_bottom = 36.0
text = "Health"

[node name="ItemUI" type="Label" parent="Background"]
margin_left = 116.0
margin_top = 38.0
margin_right = 218.0
margin_bottom = 66.0
text = "Pistol:"

[node name="Display" type="ColorRect" parent="Background"]
margin_right = 92.0
margin_bottom = 69.0
color = Color( 0.337255, 0.337255, 0.337255, 1 )

[node name="ItemSlot" type="Label" parent="Background/Display"]
margin_right = 42.0
margin_bottom = 29.0
text = "1"

[node name="ItemTexture" type="TextureRect" parent="Background/Display"]
anchor_right = 1.0
anchor_bottom = 1.0
expand = true
stretch_mode = 6

[node name="InteractionPrompt" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -14.5
margin_top = -14.0
margin_right = 14.5
margin_bottom = 14.0
color = Color( 0.0745098, 0.0745098, 0.0745098, 1 )

[node name="Key" type="Label" parent="InteractionPrompt"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "F"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="InteractionPrompt"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 29.0
margin_top = -14.0
margin_right = 64.0
margin_bottom = 14.0

[node name="ColorRect" type="ColorRect" parent="InteractionPrompt/MarginContainer"]
margin_right = 52.0
margin_bottom = 28.0
color = Color( 0, 0, 0, 0.392157 )

[node name="Description" type="Label" parent="InteractionPrompt/MarginContainer"]
margin_top = 3.0
margin_right = 52.0
margin_bottom = 24.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Interact"
align = 1
valign = 1

[node name="PauseMenu" parent="." instance=ExtResource( 3 )]
visible = false

[connection signal="pause_menu_closed" from="PauseMenu" to="." method="_on_PauseMenu_pause_menu_closed"]
